# dhet-pilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-env.example  manage.py  package.json  pnpm-lock.yaml  pyproject.toml
apps/accounts/: adapter.py  admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py  viewsets.py
apps/candidates/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/content/: admin.py  forms.py  models.py  urls.py  views.py
apps/core/: admin.py  apps.py  context_processors.py  logging_config.py  middleware.py  models.py  views.py  views_errors.py
apps/notifications/: admin.py  models.py  services.py
apps/storage/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
dhet_admin/: admin.py  apps.py  checks.py  dataclasses.py  datasets.py  decorators.py  exceptions.py  fields.py  forms.py  layout.py  overrides.py  paginator.py  sections.py  settings.py  sites.py  styles.css  utils.py  views.py  widgets.py
dhet_admin/mixins/: __init__.py  action_model_admin.py  base_model_admin.py
dhet_admin/templatetags/: dhet_admin.py  dhet_admin_list.py  dhet_admin_result_list.py
dhet_app/: asgi.py  context_processors.py  cookies.py  roles.py  settings.py  urls.py  wsgi.py
scalar/: __init__.py  get_filter_parameters.py  scalar.py
templates/: 403.html  base.html
templates/account/: confirm_login_code.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  signup.html  (+2 more)
theme/: main.css
(+326 files in other folders)
